--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="index.html">HOME</a></li>
+          <li class="active"><a href="index.html">ДОМ</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="services.html">SERVICES</a></li>
           <li><a href="works.html">WORKS</a></li>
