--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>Avtomoyka</title>
@@ -42,14 +42,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">SP<i class="fa fa-circle"></i>T</a>
+        <a class="navbar-brand" href="#">Авт<i class="fa fa-circle"></i>мойка</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="index.html">ДОМ</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="services.html">SERVICES</a></li>
-          <li><a href="works.html">WORKS</a></li>
+          <li class="active"><a href="index.html">ГЛАВНАЯ</a></li>
+          <li><a href="about.html">О НАС</a></li>
+          <li><a href="services.html">СЕРВИС</a></li>
+          <li><a href="works.html">УСЛУГИ</a></li>
           <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
         </ul>
       </div>
@@ -61,8 +61,8 @@
     <div class="container">
       <div class="row centered">
         <div class="col-lg-8 col-lg-offset-2">
-          <h1>It Doesn't Take a Rocket <b>Scientist</b></h1>
-          <h2>It Takes a Designer</h2>
+          <h1>Комплексная мойка <b>Для автомобиля</b></h1>
+          <h2>Вызывающего зависть</h2>
         </div>
       </div>
       <!-- row -->
