--- a/index.html
+++ b/index.html
@@ -76,22 +76,25 @@
       <br><br>
       <div class="col-lg-4">
         <i class="fa fa-heart"></i>
-        <h4>DESIGN</h4>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+        <h4>МОЙКА</h4>
+        <p>Автокомплекс выполняет все виды автомоечных услуг. Мойка кузова, уборка салона, мойка двигателя, мойка днища.
+          Химчистка.</p>>
       </div>
       <!-- col-lg-4 -->
 
       <div class="col-lg-4">
         <i class="fa fa-laptop"></i>
-        <h4>BOOTSTRAP</h4>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+        <h4>ХИМЧИСТКА</h4>
+        <p>Защитные и гидрофобные покрытия. Кварцевое покрытие. Жидкое стекло. Предпродажная подготовка авто.
+          Озонирование.</p>
       </div>
       <!-- col-lg-4 -->
 
       <div class="col-lg-4">
         <i class="fa fa-trophy"></i>
-        <h4>SUPPORT</h4>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+        <h4>ПОЛИРОВКА</h4>
+        <p>Полировка кузова автомобиля придание машине внешнего вида нового автомобиля, но и устранение
+          мелких повреждений, царапин</p>
       </div>
       <!-- col-lg-4 -->
     </div>
