--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Raleway:400,300,700,900" rel="stylesheet">
-
+  <link href="https://templatemag.com/spot-bootstrap-freelance-template" rel="stylesheet" >
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,12 +23,13 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
+<!--
     Template Name: Spot
     Template URL: https://templatemag.com/spot-bootstrap-freelance-template/
     Author: TemplateMag.com
     License: https://templatemag.com/license/
-  ======================================================= -->
+-->
+
 </head>
 
 <body>
